--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -27,3 +27,7 @@ binstd-endpoint:
 
 standalone-dev-endpoint:
   url: http://mock-server.tool.net:9081
+
+selenium-video-api:
+  endpoint:
+    url: http://mock-server.tool.net:9000
