:construction_worker: wait 5 minutes for bootRun to started before running cucumber

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ test:
     - cat /etc/hosts
     - export HOST_PORT=8080
     - cd env && ./dc_pc up -d && cd ..
-    - ./gradlew bootRun -x npmSetup -x npmInstall -x nodeSetup -x :frontend:clean -x :frontend:npmBuild
-#    - cd ..
-#    - sleep 60
-#    - ./gradlew cucumber
+    - ./gradlew bootRun -x npmSetup -x npmInstall -x nodeSetup -x :frontend:clean -x :frontend:npmBuild &
+    - cd ..
+    - sleep 300
+    - ./gradlew cucumber
 
