--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,10 @@ test:
   image: gaoermai/docker:18.09.8-openjdk11-001
   services:
     - docker:20.10.7-dind
+  artifacts:
+    paths:
+      - env/videos/*.mp4
+    when: always
   script:
     - apk add --no-cache build-base nss libffi-dev openssl-dev npm
     - git clone https://github.com/nerds-odd-e/attd-v2.git
