--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test:
     - docker:20.10.7-dind
   artifacts:
     paths:
-      - env/videos/*.mp4
+      - attd-v2/env/videos/*.mp4
     when: always
   script:
     - apk add --no-cache build-base nss libffi-dev openssl-dev npm
