--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,9 @@ configurations {
 
 ext {
     set('springCloudVersion', "2020.0.2")
-    set('jfactory', '0.1.0')
-    set('jfactoryCucumber', '0.1.2')
-    set('jfactoryRepoJpa', '0.1.2')
-    set('jsonAssertExtendComparator', '0.1.13')
+    set('jfactory', '0.3.17')
+    set('jfactoryCucumber', '0.1.20')
+    set('jfactoryRepoJpa', '0.1.10')
 }
 
 dependencyManagement {
@@ -55,13 +54,12 @@ dependencies {
     testImplementation "org.awaitility:awaitility:4.0.3"
     testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
     testImplementation group: 'org.mock-server', name: 'mockserver-client-java', version: '5.4.1'
-    testImplementation "com.github.leeonky:JSONassert-extend-comparator:${jsonAssertExtendComparator}"
     testImplementation "com.github.leeonky:jfactory:${jfactory}"
     testImplementation "com.github.leeonky:jfactory-cucumber:${jfactoryCucumber}"
     testImplementation "com.github.leeonky:jfactory-repo-jpa:${jfactoryRepoJpa}"
     testImplementation "org.reflections:reflections:0.9.12"
-    testImplementation 'com.github.leeonky:bean-util:0.2.9'
-    testImplementation 'com.github.leeonky:DAL-java:0.0.17'
+    testImplementation 'com.github.leeonky:DAL-java:0.3.5'
+    testImplementation 'com.github.leeonky:DAL-extension-basic:0.0.5'
 }
 
 task cucumber(type: JavaExec) {
