--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -76,3 +77,10 @@ task cucumber(type: JavaExec) {
 }
 
 tasks.bootJar { enabled = false }
+
+idea {
+    module {
+        downloadJavadoc = false
+        downloadSources = false
+    }
+}
