--- a/build.gradle
+++ b/build.gradle
@@ -54,13 +54,14 @@ dependencies {
     testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     testImplementation "org.awaitility:awaitility:4.0.3"
     testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
-    testImplementation group: 'org.mock-server', name: 'mockserver-client-java', version: '5.4.1'
+    testImplementation group: 'org.mock-server', name: 'mockserver-client-java', version: '5.13.2'
     testImplementation "com.github.leeonky:jfactory:${jfactory}"
     testImplementation "com.github.leeonky:jfactory-cucumber:${jfactoryCucumber}"
     testImplementation "com.github.leeonky:jfactory-repo-jpa:${jfactoryRepoJpa}"
     testImplementation 'com.github.leeonky:DAL-java:0.3.5'
     testImplementation 'com.github.leeonky:DAL-extension-basic:0.0.5'
     testImplementation 'com.github.leeonky:RESTful-cucumber:0.0.10'
+    testImplementation 'com.yaoruozhou:jfactory-repo-mock-server:0.3.0'
 }
 
 task cucumber(type: JavaExec) {
