--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ configurations {
 
 ext {
     set('springCloudVersion', "2020.0.2")
-    set('jfactory', '0.3.17')
-    set('jfactoryCucumber', '0.1.20')
+    set('jfactory', '0.3.20')
+    set('jfactoryCucumber', '0.1.24')
     set('jfactoryRepoJpa', '0.1.10')
 }
 
@@ -44,23 +44,29 @@ dependencies {
     testAnnotationProcessor('org.projectlombok:lombok:1.18.18')
     testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     testImplementation('org.projectlombok:lombok:1.18.18')
-    testImplementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'com.vaadin.external.google', module: 'android-json'
+    }
     testImplementation("mysql:mysql-connector-java:8.0.13")
     testImplementation("io.cucumber:cucumber-java:6.10.2")
     testImplementation("io.cucumber:cucumber-spring:6.10.2")
     testImplementation("org.assertj:assertj-core:3.19.0")
     testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     testImplementation "org.awaitility:awaitility:4.0.3"
-    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
+    testImplementation('org.skyscreamer:jsonassert:1.5.0') {
+        exclude group: 'com.vaadin.external.google', module: 'android-json'
+    }
     testImplementation group: 'org.mock-server', name: 'mockserver-client-java', version: '5.13.2'
     testImplementation "com.github.leeonky:jfactory:${jfactory}"
     testImplementation "com.github.leeonky:jfactory-cucumber:${jfactoryCucumber}"
     testImplementation "com.github.leeonky:jfactory-repo-jpa:${jfactoryRepoJpa}"
-    testImplementation 'com.github.leeonky:DAL-java:0.3.5'
-    testImplementation 'com.github.leeonky:DAL-extension-basic:0.0.5'
-    testImplementation 'com.github.leeonky:RESTful-cucumber:0.0.10'
+    testImplementation 'com.github.leeonky:DAL-java:0.3.19'
+    testImplementation 'com.github.leeonky:DAL-extension-basic:0.0.12'
+    testImplementation 'com.github.leeonky:RESTful-cucumber:0.0.17'
+    testImplementation "com.github.leeonky:bean-util:0.6.3"
+    testImplementation 'org.reflections:reflections:0.9.11'
+    testImplementation('org.json:json:20220924')
     testImplementation 'com.yaoruozhou:jfactory-repo-mock-server:0.3.0'
 }
 
@@ -73,6 +79,7 @@ task cucumber(type: JavaExec) {
             '--glue', 'com.odde.atddv2',
             '--glue', 'com.github.leeonky.jfactory.cucumber',
             '--glue', 'com.github.leeonky.cucumber.restful',
+            '--glue', 'com.yaoruozhou',
             'src/test/resources']
 }
 
